# PS2CONCEPT

./: .gitignore  README.md  add  generate  generate_output.py  pyproject.toml
config/: avm_rules.json  cao_rules.json  production_answers.example.json
productions/2627-faust/: production.json
src/autoplanner/: __init__.py  avm.py  cli.py  export.py  models.py  parser.py  production.py  rules_report.py  shift_planner.py
tests/: test_parser.py  test_production_workflow.py
