[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-planner"
version = "0.1.0"
description = "Offline omzetter en controlelaag voor NO&B-productieplanningen"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=6.0,<7",
]

[project.scripts]
auto-planner = "autoplanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
